# Modern_Robotics

./: README.md
Assignment1/: Assignment1.launch  CMakeLists.txt  README.md  package.xml
Assignment1/src/: minimal_commander.cpp  velocity_controller.cpp  velocity_simulator.cpp
action_server_project/: CMakeLists.txt  README.md  action_server_project.launch  package.xml
action_server_project/action/: amplitude_frequency_msg.action
action_server_project/src/: amplitude_frequency_action_client.cpp  velocity_commander.cpp  velocity_commander_action_server.cpp  velocity_simulator.cpp
baxter_moves_library/: CMakeLists.txt  README.md  package.xml
baxter_moves_library/html/: annotated.html  class_interesting_moves-members.html  class_interesting_moves.html  classes.html  dir_a21f2d8e84ab79362526a1c05d62eea9.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  index.html  my__interesting__moves_8h_source.html
baxter_moves_library/html/search/: all_1.js  search.js
baxter_moves_library/include/baxter_moves_library/: my_interesting_moves.h
baxter_moves_library/src/: my_interesting_moves.cpp
baxter_moves_usage/: CMakeLists.txt  README.md  baxter.world  baxter_moves_usage.launch  baxter_world.launch  package.xml
baxter_moves_usage/src/: my_interesting_moves_usage.cpp
my_pcl_utils/: CMakeLists.txt  README.md  package.xml  package.xml~
my_pcl_utils/include/my_pcl_utils/: my_pcl_utils.h
my_pcl_utils/src/: my_pcl_utils.cpp
point_cloud_processing/: CMakeLists.txt  README.md  package.xml  package.xml~
point_cloud_processing/src/: find_coplanar_points.cpp
trajectory_msgs_project/: CMakeLists.txt  README.md  package.xml  trajectory_msgs_project.launch
trajectory_msgs_project/src/: example_trajectory_action_client.cpp  trajectory_action_client.cpp  trajectory_action_server.cpp  two_DOF_joint_controller.cpp  two_DOF_robot_description.urdf
urdf_design_project/: CMakeLists.txt  README.md  package.xml  urdf_design_project.launch
urdf_design_project/src/: joint_controller.cpp  two_joint_robot_description.urdf
velocity_project/: CMakeLists.txt  README.md  package.xml  velocity_project.launch
velocity_project/src/: amplitude_frequency_client.cpp  velocity_commander.cpp  velocity_controller.cpp  velocity_simulator.cpp
velocity_project/srv/: amplitude_frequency_msg.srv
vision_guided_motion/: CMakeLists.txt  README.md  package.xml  vision_guided_motion.launch
vision_guided_motion/src/: vision_guided_motion.cpp
